applications/home-automation/base/omnitools/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omnitools
  labels:
    app: omnitools
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: omnitools
